--- a/ind5003_enron_nlp.ipynb
+++ b/ind5003_enron_nlp.ipynb
@@ -5,27 +5,39 @@
    "metadata": {},
    "source": [
     "# IND5003 Enron Project\n",
-    "\n",
+    "## Contents of this Jupyter Notebook\n",
     "### Dataset\n",
     "Dataset from Prof: \n",
     "(https://www.cs.cmu.edu/~./enron/)\n",
     "- Unstructured Dataset containing raw text in the form of emails\n",
     "**Make sure that the dataset 'maildir' is in the same directory as your project on your own system. Else this would not work**\n",
     "\n",
-    "## Contents of this Jupyter Notebook\n",
     "\n",
-    "### Section 1: Data Preprocessing\n",
-    "- Import, Process and Clean Data\n",
-    "\n",
-    "    #### Steps for Data Preprocessing:\n",
-    "    1. Generate `pandas` dataframe from the raw files in maildir\n",
-    "    2. Clean Text\n",
-    "    3. Stem Text"
+    "### Overall Steps to Tackle this Project\n",
+    "1. Data Extraction\n",
+    "2. Data Cleaning & Preprocessing\n",
+    "3. Sender Frequency Analysis\n",
+    "4. Visualisation\n",
+    "    - Word Cloud & Bar Charts for the Top Senders (20%)\n",
+    "    - Network Graph\n",
+    "5. Unsupervised Techniques\n",
+    "    - LDA Topic Modeling - Find out key topics from the top 20% of senders\n",
+    "    - Temporal Analysis - Segment the emails by quarters. Look at the way communication changes over time.\n",
+    "    - Hierarchical Clustering - Group senders based on communication patterns\n",
+    "    - Anomaly Detection - Look for outliers and abnormal communication patterns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 1: Data Extraction\n",
+    "- Extract the emails from the unstructured raw folder\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +208,9 @@
     }
    ],
    "source": [
+    "\n",
+    "# ! This is a very large dataset and will take a long time to run\n",
+    "# ! DO NOT RUN THIS FOR FUN UNLESS YOU WANT YOUR COMPUTER TO CRASH\n",
     "def parse_email(file_path):\n",
     "    try:\n",
     "        with open(file_path, 'rb') as f:\n",
@@ -256,21 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'emails_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Convert emails_df to a CSV file\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Save the DataFrame as a CSV file in the specified directory\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43memails_df\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/Dylan/Documents/IND5003/Projects/emails_uncleaned.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'emails_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert emails_df to a CSV file\n",
     "# Save the DataFrame as a CSV file in the specified directory\n",
@@ -280,15 +283,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        From  \\\n",
+      "0            msagel@home.com   \n",
+      "1    slafontaine@globalp.com   \n",
+      "2    iceoperations@intcx.com   \n",
+      "3  jeff.youngflesh@enron.com   \n",
+      "4  caroline.abramo@enron.com   \n",
+      "\n",
+      "                                                  To  \\\n",
+      "0                                  jarnold@enron.com   \n",
+      "1                              john.arnold@enron.com   \n",
+      "2  icehelpdesk@intcx.com, internalmarketing@intcx...   \n",
+      "3  anthony.gilmore@enron.com, colleen.koenig@enro...   \n",
+      "4                             mike.grigsby@enron.com   \n",
+      "\n",
+      "                              Date  \\\n",
+      "0  Thu, 16 Nov 2000 09:30:00 -0800   \n",
+      "1  Fri, 08 Dec 2000 05:05:00 -0800   \n",
+      "2  Tue, 15 May 2001 09:43:00 -0700   \n",
+      "3  Mon, 27 Nov 2000 01:49:00 -0800   \n",
+      "4  Tue, 12 Dec 2000 09:33:00 -0800   \n",
+      "\n",
+      "                                             Subject  \\\n",
+      "0                                             Status   \n",
+      "1                                 re:summer inverses   \n",
+      "2                      The WTI Bullet swap contracts   \n",
+      "3  Invitation: EBS/GSS Meeting w/Bristol Babcock ...   \n",
+      "4                                       Harvard Mgmt   \n",
+      "\n",
+      "                                                Body  \n",
+      "0  John:\\n?\\nI'm not really sure what happened be...  \n",
+      "1  i suck-hope youve made more money in natgas la...  \n",
+      "2   Hi,\\n\\n\\n  Following the e-mail you have rece...  \n",
+      "3  Conference Room TBD.  \\n\\nThis meeting will be...  \n",
+      "4  Mike- I have their trader coming into the offi...  \n"
+     ]
+    }
+   ],
    "source": [
     "# Load the CSV file back into a DataFrame\n",
     "\n",
     "# PLEASE CHANGE IT TO YOUR OWN DIRECTORY IN YOUR OWN SYSTEM \n",
     "\n",
-    "enron_uncleaned_emails = pd.read_csv('/Users/Dylan/Documents/IND5003/Projects/enron_emails_uncleaned.csv')"
+    "enron_uncleaned_emails = pd.read_csv('/Users/Dylan/Documents/IND5003/Projects/enron_emails_uncleaned.csv')\n",
+    "print(enron_uncleaned_emails.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 2: Data Preprocessing\n",
+    "### Start with the Cleaning\n",
+    "* Check for any nulls\n",
+    "* Drop the missing values\n",
+    "* Remove the duplicates\n",
+    "* Format the dates \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Column  Missing Values\n",
+      "0     From               0\n",
+      "1       To           21847\n",
+      "2     Date               0\n",
+      "3  Subject           19187\n",
+      "4     Body               0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for Nulls in Each Column\n",
+    "missing_values = enron_uncleaned_emails.isnull().sum()\n",
+    "missing_values_df = pd.DataFrame({'Column': missing_values.index, 'Missing Values': missing_values.values})\n",
+    "print(missing_values_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>517396</td>\n",
+       "      <td>495549</td>\n",
+       "      <td>517396</td>\n",
+       "      <td>498209</td>\n",
+       "      <td>517396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>20326</td>\n",
+       "      <td>58556</td>\n",
+       "      <td>224119</td>\n",
+       "      <td>159286</td>\n",
+       "      <td>249020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>kay.mann@enron.com</td>\n",
+       "      <td>pete.davis@enron.com</td>\n",
+       "      <td>Wed, 27 Jun 2001 16:02:00 -0700</td>\n",
+       "      <td>RE:</td>\n",
+       "      <td>As you know, Enron Net Works (ENW) and Enron G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>16735</td>\n",
+       "      <td>9155</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>6477</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      From                    To  \\\n",
+       "count               517396                495549   \n",
+       "unique               20326                 58556   \n",
+       "top     kay.mann@enron.com  pete.davis@enron.com   \n",
+       "freq                 16735                  9155   \n",
+       "\n",
+       "                                   Date Subject  \\\n",
+       "count                            517396  498209   \n",
+       "unique                           224119  159286   \n",
+       "top     Wed, 27 Jun 2001 16:02:00 -0700     RE:   \n",
+       "freq                               1118    6477   \n",
+       "\n",
+       "                                                     Body  \n",
+       "count                                              517396  \n",
+       "unique                                             249020  \n",
+       "top     As you know, Enron Net Works (ENW) and Enron G...  \n",
+       "freq                                                  112  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Description of the DataFrame\n",
+    "enron_uncleaned_emails.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill out the missing values with empty strings\n",
+    "enron_cleaned_emails = enron_uncleaned_emails.fillna('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Column  Missing Values\n",
+      "0     From               0\n",
+      "1       To               0\n",
+      "2     Date               0\n",
+      "3  Subject               0\n",
+      "4     Body               0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Post cleaning Check\n",
+    "missing_values_check = enron_cleaned_emails.isnull().sum()\n",
+    "missing_values_df_check = pd.DataFrame({'Column': missing_values_check.index, 'Missing Values': missing_values_check.values})\n",
+    "print(missing_values_df_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>517396</td>\n",
+       "      <td>517396</td>\n",
+       "      <td>517396</td>\n",
+       "      <td>517396</td>\n",
+       "      <td>517396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>20326</td>\n",
+       "      <td>58557</td>\n",
+       "      <td>224119</td>\n",
+       "      <td>159287</td>\n",
+       "      <td>249020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>kay.mann@enron.com</td>\n",
+       "      <td></td>\n",
+       "      <td>Wed, 27 Jun 2001 16:02:00 -0700</td>\n",
+       "      <td></td>\n",
+       "      <td>As you know, Enron Net Works (ENW) and Enron G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>16735</td>\n",
+       "      <td>21847</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>19187</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      From      To                             Date Subject  \\\n",
+       "count               517396  517396                           517396  517396   \n",
+       "unique               20326   58557                           224119  159287   \n",
+       "top     kay.mann@enron.com          Wed, 27 Jun 2001 16:02:00 -0700           \n",
+       "freq                 16735   21847                             1118   19187   \n",
+       "\n",
+       "                                                     Body  \n",
+       "count                                              517396  \n",
+       "unique                                             249020  \n",
+       "top     As you know, Enron Net Works (ENW) and Enron G...  \n",
+       "freq                                                  112  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Describe the cleaned DataFrame\n",
+    "enron_cleaned_emails.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for duplicates in the columns subject and body\n",
+    "# Format Date and Time to correct format\n"
    ]
   },
   {
