--- a/ind5003_enron_nlp.ipynb
+++ b/ind5003_enron_nlp.ipynb
@@ -10,9 +10,42 @@
     "Dataset from Prof: \n",
     "(https://www.cs.cmu.edu/~./enron/)\n",
     "- Unstructured Dataset containing raw text in the form of emails\n",
-    "**Make sure that the dataset 'maildir' is in the same directory as your project on your own system. Else this would not work**\n",
+    "**Make sure that the dataset 'maildir' is in the same directory as your project on your own system. Else this would not work**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approach to this Project\n",
     "\n",
+    "### Research Questions\n",
+    "Thought of Research Questions to provide a narrative and storyline in our analysis of the Enron Email Corpus\n",
     "\n",
+    "We would be taking a broad to narrow approach in terms of the narrative that we are looking to create. \n",
+    "\n",
+    "Some research questions that we would be hoping to analyse in this project are:\n",
+    "1. Are there any topical shifts that we can identify prior, leading up to and after the fraud has been exposed?\n",
+    "2. Can we detect sentiment shifts and anomalies in communication patterns leading up to, during and after the exposure of the fraud?\n",
+    "3. Identification of key individuals involved in the key discussions and anomalies in their comms patterns\n",
+    "\n",
+    "#### Timeline\n",
+    "\n",
+    "We have an intention to split our analysis into 3 defined timeframes:\n",
+    "    1. Pre-Crisis \n",
+    "    2. During Crisis\n",
+    "    3. Post Crisis\n",
+    "    [GUYS WE NEED TO THINK OF THE DATES TO SPLIT THE TIMEFRAMES INTO. I WAS THINKING WE CAN FOLLOW JUST THE TIMELINE. THIS PART DEFINITELY HAVE TO STATE ASSUMPTIONS]\n",
+    "\n",
+    "These research questions would be answered using a variety of NLP and Unsupervised Learning Techniques. \n",
+    "\n",
+    "[GUYS WE NEED TO THINK OF THE TECHNIQUES]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Overall Steps to Tackle this Project\n",
     "1. Data Extraction\n",
     "2. Data Cleaning & Preprocessing\n",
@@ -37,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -332,8 +365,98 @@
     "\n",
     "# PLEASE CHANGE IT TO YOUR OWN DIRECTORY IN YOUR OWN SYSTEM \n",
     "\n",
+    "# Load the CSV file back into a DataFrame\n",
+    "\n",
+    "# PLEASE CHANGE IT TO YOUR OWN DIRECTORY IN YOUR OWN SYSTEM \n",
+    "\n",
     "enron_uncleaned_emails = pd.read_csv('/Users/Dylan/Documents/IND5003/Projects/enron_emails_uncleaned.csv')\n",
     "print(enron_uncleaned_emails.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            From  \\\n",
+      "617     louise.kitchen@enron.com   \n",
+      "874     louise.kitchen@enron.com   \n",
+      "910     louise.kitchen@enron.com   \n",
+      "926     louise.kitchen@enron.com   \n",
+      "5072    louise.kitchen@enron.com   \n",
+      "...                          ...   \n",
+      "503415  louise.kitchen@enron.com   \n",
+      "503507  louise.kitchen@enron.com   \n",
+      "509732  louise.kitchen@enron.com   \n",
+      "509790  louise.kitchen@enron.com   \n",
+      "509829  louise.kitchen@enron.com   \n",
+      "\n",
+      "                                                       To  \\\n",
+      "617                                 john.arnold@enron.com   \n",
+      "874     tim.belden@enron.com, f..calger@enron.com, m.....   \n",
+      "910     wes.colwell@enron.com, georgeanne.hodges@enron...   \n",
+      "926                                    c..bland@enron.com   \n",
+      "5072                              john.lavorato@enron.com   \n",
+      "...                                                   ...   \n",
+      "503415  rob.milnthorp@enron.com, f..calger@enron.com, ...   \n",
+      "503507  rob.milnthorp@enron.com, f..calger@enron.com, ...   \n",
+      "509732  k..allen@enron.com, john.arnold@enron.com, har...   \n",
+      "509790  rob.milnthorp@enron.com, f..calger@enron.com, ...   \n",
+      "509829  rob.milnthorp@enron.com, f..calger@enron.com, ...   \n",
+      "\n",
+      "                                   Date  \\\n",
+      "617     Wed, 24 Oct 2001 11:05:03 -0700   \n",
+      "874     Thu, 27 Dec 2001 14:58:02 -0800   \n",
+      "910     Mon, 31 Dec 2001 10:53:43 -0800   \n",
+      "926     Thu, 27 Sep 2001 06:24:25 -0700   \n",
+      "5072    Tue, 23 Oct 2001 07:24:27 -0700   \n",
+      "...                                 ...   \n",
+      "503415  Wed, 06 Feb 2002 08:03:03 -0800   \n",
+      "503507  Tue, 05 Feb 2002 15:08:44 -0800   \n",
+      "509732  Wed, 07 Nov 2001 16:36:23 -0800   \n",
+      "509790  Tue, 05 Feb 2002 19:08:44 -0800   \n",
+      "509829  Wed, 06 Feb 2002 12:03:03 -0800   \n",
+      "\n",
+      "                                                 Subject  \\\n",
+      "617                           Don't need to call me back   \n",
+      "874                        Re-start/Integration Planning   \n",
+      "910                                                NETCO   \n",
+      "926     FW: Fantastic Friday/Super Saturday Interviewers   \n",
+      "5072     FW: Management Conference - Business Unit Panel   \n",
+      "...                                                  ...   \n",
+      "503415                                 YOU HAVE 48 HOURS   \n",
+      "503507                 Commercial Re-start Sub-Committee   \n",
+      "509732                                          Baby Boy   \n",
+      "509790                 Commercial Re-start Sub-Committee   \n",
+      "509829                                 YOU HAVE 48 HOURS   \n",
+      "\n",
+      "                                                     Body  \n",
+      "617            Sorry I completely forgot it was Wednesday  \n",
+      "874     We have for the last couple of weeks started t...  \n",
+      "910     The New Year has arrived and we really to fina...  \n",
+      "926     \\nTed,\\n\\nThe people included in the cc: are t...  \n",
+      "5072    ?????\\n\\n\\n----Original Message-----\\nFrom: \\t...  \n",
+      "...                                                   ...  \n",
+      "503415  This is not a circular and you will not get an...  \n",
+      "503507  Following this morning's meeting, we have agre...  \n",
+      "509732  \\nJack Anthony Lavorato just arrived weighing ...  \n",
+      "509790  Following this morning's meeting, we have agre...  \n",
+      "509829  This is not a circular and you will not get an...  \n",
+      "\n",
+      "[1752 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find \"kitchen\" in the column \"From\"\n",
+    "\n",
+    "# This is to determine that there are still emails sent from louise kitchen despite the original parsing error due to the encoding of the email\n",
+    "kitchen_emails = enron_uncleaned_emails[enron_uncleaned_emails['From'].str.contains('kitchen', case=False, na=False)]\n",
+    "print(kitchen_emails)"
    ]
   },
   {
@@ -351,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +587,7 @@
        "freq                                                  112  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -604,13 +727,252 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Check for duplicates in the columns subject and body\n",
-    "# Format Date and Time to correct format\n"
+    "* From running the code above, the output would show that there are 249020 emails with unique bodies out of the 517396 emails. \n",
+    "    * This means that ~51.9% of emails in the uncleaned dataframe are not unique\n",
+    "    * This would ensure that the subsequent analytical metrics (when performing LDA, TFIDF, Word2vec) are not inflated. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>249020</td>\n",
+       "      <td>249020</td>\n",
+       "      <td>249020</td>\n",
+       "      <td>249020</td>\n",
+       "      <td>249020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>20129</td>\n",
+       "      <td>58069</td>\n",
+       "      <td>219084</td>\n",
+       "      <td>158462</td>\n",
+       "      <td>249020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>jeff.dasovich@enron.com</td>\n",
+       "      <td></td>\n",
+       "      <td>Wed, 27 Jun 2001 16:02:00 -0700</td>\n",
+       "      <td></td>\n",
+       "      <td>John:\\n?\\nI'm not really sure what happened be...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>5486</td>\n",
+       "      <td>9024</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>8577</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           From      To                             Date  \\\n",
+       "count                    249020  249020                           249020   \n",
+       "unique                    20129   58069                           219084   \n",
+       "top     jeff.dasovich@enron.com          Wed, 27 Jun 2001 16:02:00 -0700   \n",
+       "freq                       5486    9024                             1118   \n",
+       "\n",
+       "       Subject                                               Body  \n",
+       "count   249020                                             249020  \n",
+       "unique  158462                                             249020  \n",
+       "top             John:\\n?\\nI'm not really sure what happened be...  \n",
+       "freq      8577                                                  1  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove duplicate emails based on the 'Body' column, keeping only the first occurrence\n",
+    "enron_cleaned_emails_body_unique = enron_cleaned_emails.drop_duplicates(subset=['Body'], keep='first')\n",
+    "\n",
+    "# Describe the DataFrame after removing duplicates\n",
+    "enron_cleaned_emails_body_unique.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jeff Dasovich sent 5486 emails.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27219</th>\n",
+       "      <td>jeff.dasovich@enron.com</td>\n",
+       "      <td>d..steffes@enron.com</td>\n",
+       "      <td>Tue, 23 Oct 2001 14:25:50 -0700</td>\n",
+       "      <td>RE:</td>\n",
+       "      <td>thanks.\\n\\n -----Original Message-----\\nFrom: ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27277</th>\n",
+       "      <td>jeff.dasovich@enron.com</td>\n",
+       "      <td>ginger.dernehl@enron.com, d..steffes@enron.com...</td>\n",
+       "      <td>Wed, 17 Oct 2001 14:43:57 -0700</td>\n",
+       "      <td>RE: Golf - November Direct Report Meeting</td>\n",
+       "      <td>Yes.\\n\\n -----Original Message-----\\nFrom: \\tD...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27332</th>\n",
+       "      <td>jeff.dasovich@enron.com</td>\n",
+       "      <td>d..steffes@enron.com, susan.mara@enron.com</td>\n",
+       "      <td>Tue, 23 Oct 2001 17:02:14 -0700</td>\n",
+       "      <td>FW: Stipulation Comments</td>\n",
+       "      <td>I asked Mike Day to make sure that we were kep...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27334</th>\n",
+       "      <td>jeff.dasovich@enron.com</td>\n",
+       "      <td>d..steffes@enron.com, susan.mara@enron.com</td>\n",
+       "      <td>Mon, 22 Oct 2001 11:52:32 -0700</td>\n",
+       "      <td>FW: Angelides Oct. 19th Letter to L. Lynch Urg...</td>\n",
+       "      <td>FYI.  Here's a note I sent to the large custom...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27369</th>\n",
+       "      <td>jeff.dasovich@enron.com</td>\n",
+       "      <td>c..williams@enron.com</td>\n",
+       "      <td>Fri, 26 Oct 2001 11:28:06 -0700</td>\n",
+       "      <td>RE: Edison meet and confer call</td>\n",
+       "      <td>Let's try this.  It's all inter-related.  PG&amp;E...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          From  \\\n",
+       "27219  jeff.dasovich@enron.com   \n",
+       "27277  jeff.dasovich@enron.com   \n",
+       "27332  jeff.dasovich@enron.com   \n",
+       "27334  jeff.dasovich@enron.com   \n",
+       "27369  jeff.dasovich@enron.com   \n",
+       "\n",
+       "                                                      To  \\\n",
+       "27219                               d..steffes@enron.com   \n",
+       "27277  ginger.dernehl@enron.com, d..steffes@enron.com...   \n",
+       "27332         d..steffes@enron.com, susan.mara@enron.com   \n",
+       "27334         d..steffes@enron.com, susan.mara@enron.com   \n",
+       "27369                              c..williams@enron.com   \n",
+       "\n",
+       "                                  Date  \\\n",
+       "27219  Tue, 23 Oct 2001 14:25:50 -0700   \n",
+       "27277  Wed, 17 Oct 2001 14:43:57 -0700   \n",
+       "27332  Tue, 23 Oct 2001 17:02:14 -0700   \n",
+       "27334  Mon, 22 Oct 2001 11:52:32 -0700   \n",
+       "27369  Fri, 26 Oct 2001 11:28:06 -0700   \n",
+       "\n",
+       "                                                 Subject  \\\n",
+       "27219                                                RE:   \n",
+       "27277          RE: Golf - November Direct Report Meeting   \n",
+       "27332                           FW: Stipulation Comments   \n",
+       "27334  FW: Angelides Oct. 19th Letter to L. Lynch Urg...   \n",
+       "27369                    RE: Edison meet and confer call   \n",
+       "\n",
+       "                                                    Body  \n",
+       "27219  thanks.\\n\\n -----Original Message-----\\nFrom: ...  \n",
+       "27277  Yes.\\n\\n -----Original Message-----\\nFrom: \\tD...  \n",
+       "27332  I asked Mike Day to make sure that we were kep...  \n",
+       "27334  FYI.  Here's a note I sent to the large custom...  \n",
+       "27369  Let's try this.  It's all inter-related.  PG&E...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# # When running the code block above, i observed that jeff dasovich sent the most emails. \n",
+    "# # Now i want to explore the number of emails he sent\n",
+    "# # Filter emails where 'From' is 'jeff.dasovich@enron.com'\n",
+    "# jeff_emails = enron_cleaned_emails_body_unique[enron_cleaned_emails_body_unique['From'] == 'jeff.dasovich@enron.com']\n",
+    "\n",
+    "# # Count the number of emails he sent\n",
+    "# jeff_emails_count = jeff_emails.shape[0]\n",
+    "\n",
+    "# # Display the count\n",
+    "# print(f\"Jeff Dasovich sent {jeff_emails_count} emails.\")\n",
+    "\n",
+    "# # Display the first few rows of Jeff's emails\n",
+    "# jeff_emails.head()\n"
    ]
   },
   {
