--- a/eda_analysis.ipynb
+++ b/eda_analysis.ipynb
@@ -998,7 +998,16 @@
     }
    ],
    "source": [
-    "# Convert the 'Year' column to an integer type to remove the decimal place\n",
+    "# Convert the Date column to a pandas datetime object in the deduplicated dataframe\n",
+    "enron_cleaned_emails_body_unique['Date'] = pd.to_datetime(enron_cleaned_emails_body_unique['Date'], errors='coerce', utc=False)\n",
+    "\n",
+    "# Print the types of each column to ensure that the Date column is now a datetime object\n",
+    "print(enron_cleaned_emails_body_unique.dtypes)\n",
+    "\n",
+    "# Extract the 'Year' from the 'Date' column\n",
+    "enron_cleaned_emails_body_unique['Year'] = enron_cleaned_emails_body_unique['Date'].dt.year\n",
+    "\n",
+    "# Convert the 'Year' column to an integer type if necessary\n",
     "enron_cleaned_emails_body_unique['Year'] = enron_cleaned_emails_body_unique['Year'].astype('Int64')\n",
     "\n",
     "# Count the number of emails sent per year and sort the index (years)\n",
@@ -1008,7 +1017,7 @@
     "emails_per_year_df = pd.DataFrame({'Year': emails_per_year.index, 'Emails': emails_per_year.values})\n",
     "\n",
     "# Print the resulting DataFrame\n",
-    "print(emails_per_year_df)\n"
+    "print(emails_per_year_df)"
    ]
   },
   {
